Remove DEPLOYMENT_FRONTEND.md from git tracking, keep local only

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 # ============================================
+# Project-specific files
+# ============================================
+DEPLOYMENT_FRONTEND.md
+
+# ============================================
 # Node.js / Frontend
 # ============================================
 node_modules/
